--- a/index.html
+++ b/index.html
@@ -91,50 +91,60 @@
     <!---our services section----->
     <section class="sec3" id="services">
         <h2 class="head">My services</h2>
-        <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, adipisci.</p>
+        <p class="info">These are the services i can provide.</p>
         <div class="container">
             <div class="box" data-aos="flip-left" data-aos-offset="250" data-aos-duration="1000">
                 <div class="content">
                     <img src="https://img.icons8.com/wired/64/000000/web-laptop.png"/>
                     <h2>Web Design</h2>
-                    <p>web documentation can be done here for your required efficient web applications.</p>
+                    <p>web documentation can be done here for your required efficient web applications.<br>
+                        <a href="https://rb.gy/misxn8" target="_blank">CLICK HERE TO CHECK MY WORK</a>
+                    </p>
                 </div>
             </div>
-
-
             <div class="box" data-aos="flip-right" data-aos-offset="250" data-aos-duration="1000">
                 <div class="content">
                     <img src="https://img.icons8.com/ios-filled/50/000000/web.png"/>
                     <h2>Web Develpoment</h2>
-                    <p>Along with wed documentation , here static websites are created for your requirements .</p>
+                    <p>Along with wed documentation , here static websites are created for your requirements .<br>
+                    <a href="https://rb.gy/r86cnr" target="_blank">CLICK HERE TO CHECK MY WORK</a>
+                    </p>
                 </div>
             </div>
             <div class="box" data-aos="flip-up" data-aos-offset="250" data-aos-duration="1000">
                 <div class="content">
                     <img src="https://img.icons8.com/wired/64/000000/camera.png"/>
                     <h2>Direction</h2>
-                    <p>come up with scripts ,we together make wonders .</p>
+                    <p>come up with scripts ,we together make wonders .<br>
+                    <a href="https://www.youtube.com/channel/UCOPwgy30XIhKmPfdAbHHU7A" target="_blank">CLICK HERE TO CHECK MY WORK</a>
+                    </p>
                 </div>
             </div>
             <div class="box" data-aos="flip-down" data-aos-offset="250" data-aos-duration="1000">
                 <div class="content">
                     <img src="https://img.icons8.com/wired/64/000000/portrait-mode-female.png"/>
                     <h2>Photography</h2>
-                    <p>Intrested in freezing a moment .</p>
+                    <p>Intrested in freezing a moment .<br>
+                    <a href="https://www.instagram.com/_we_for_us_?r=nametag" target="_blank">CLICK HERE TO CHECK MY WORK</a>
+                    </p>
                 </div>
             </div>
             <div class="box" data-aos="fade-right" data-aos-offset="250" data-aos-duration="1000">
                 <div class="content" >
                    <img src="https://img.icons8.com/ios-filled/50/000000/content.png"/>
                     <h2>Content Writing</h2>
-                    <p>PIng me for scripts , articles .</p>
+                    <p>PIng me for scripts , articles .<br>
+                    <a href="https://www.youtube.com/channel/UCOPwgy30XIhKmPfdAbHHU7A" target="_blank">CLICK HERE TO CHECK MY WORK</a>
+                    </p>
                 </div>
             </div>
             <div class="box" data-aos="fade-left" data-aos-offset="250" data-aos-duration="1000">
                 <div class="content">
                     <img src="https://img.icons8.com/wired/64/000000/video.png"/>
                     <h2>Video Editing</h2>
-                    <p>To make the audience enjoy the story by making them forget about the juxtapositiond of the shots.</p>
+                    <p>To make the audience enjoy the story by making them forget about the juxtapositiond of the shots.<br>
+                    <a href="https://www.youtube.com/channel/UCOPwgy30XIhKmPfdAbHHU7A" target="_blank">CLICK HERE TO CHECK MY WORK</a>
+                    </p>
                 </div>
             </div>
         </div>
