--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <img src="https://img.icons8.com/wired/64/000000/web-laptop.png"/>
                     <h2>Web Design</h2>
                     <p>web documentation can be done here for your required efficient web applications.<br>
-                        <a href="https://rb.gy/misxn8" target="_blank" style="color:white;">CLICK HERE TO CHECK MY WORK</a>
+                        <a href="https://rb.gy/misxn8" target="_blank">CLICK HERE TO CHECK MY WORK</a>
                     </p>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                     <img src="https://img.icons8.com/ios-filled/50/000000/web.png"/>
                     <h2>Web Develpoment</h2>
                     <p>Along with wed documentation , here static websites are created for your requirements .<br>
-                    <a href="https://rb.gy/r86cnr" target="_blank" style="color:white;>CLICK HERE TO CHECK MY WORK</a>
+                    <a href="https://rb.gy/r86cnr" target="_blank">CLICK HERE TO CHECK MY WORK</a>
                     </p>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                     <img src="https://img.icons8.com/wired/64/000000/camera.png"/>
                     <h2>Direction</h2>
                     <p>come up with scripts ,we together make wonders .<br>
-                    <a href="https://www.youtube.com/channel/UCOPwgy30XIhKmPfdAbHHU7A" target="_blank" style="color:white;>CLICK HERE TO CHECK MY WORK</a>
+                    <a href="https://www.youtube.com/channel/UCOPwgy30XIhKmPfdAbHHU7A" target="_blank">CLICK HERE TO CHECK MY WORK</a>
                     </p>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                     <img src="https://img.icons8.com/wired/64/000000/portrait-mode-female.png"/>
                     <h2>Photography</h2>
                     <p>Intrested in freezing a moment .<br>
-                    <a href="https://www.instagram.com/_we_for_us_?r=nametag" target="_blank" style="color:white;>CLICK HERE TO CHECK MY WORK</a>
+                    <a href="https://www.instagram.com/_we_for_us_?r=nametag" target="_blank">CLICK HERE TO CHECK MY WORK</a>
                     </p>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                    <img src="https://img.icons8.com/ios-filled/50/000000/content.png"/>
                     <h2>Content Writing</h2>
                     <p>PIng me for scripts , articles .<br>
-                    <a href="https://www.youtube.com/channel/UCOPwgy30XIhKmPfdAbHHU7A" target="_blank" style="color:white;>CLICK HERE TO CHECK MY WORK</a>
+                    <a href="https://www.youtube.com/channel/UCOPwgy30XIhKmPfdAbHHU7A" target="_blank">CLICK HERE TO CHECK MY WORK</a>
                     </p>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                     <img src="https://img.icons8.com/wired/64/000000/video.png"/>
                     <h2>Video Editing</h2>
                     <p>To make the audience enjoy the story by making them forget about the juxtapositiond of the shots.<br>
-                    <a href="https://www.youtube.com/channel/UCOPwgy30XIhKmPfdAbHHU7A" target="_blank" style="color:white;>CLICK HERE TO CHECK MY WORK</a>
+                    <a href="https://www.youtube.com/channel/UCOPwgy30XIhKmPfdAbHHU7A" target="_blank">CLICK HERE TO CHECK MY WORK</a>
                     </p>
                 </div>
             </div>
